--- a/index.html
+++ b/index.html
@@ -3,13 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Oriourson by Orinoco est une boutique en ligne de vente d'ours en peluche fait mains.">
+    <meta name="description" content="Oriourson by Orinoco est une boutique en ligne de vente d'ours en peluche fait main.">
     <meta name="robots" content="index, follow">
 
     <link href="style.css" rel="stylesheet">
-    <title>Oriourson - Vente en ligne d'ours en peluche fait mains</title>
+    <title>Oriourson - Vente en ligne d'ours en peluche fait main</title>
 </head>
 <body>
+    <header>
+        <section class="petit_bandeau">
+            <figure>
+                <img src="./images/logo_orinoco1.png" alt="logo Orinoco">
+            </figure>
+            <div id="form_connect">
+                <form>
+                    <label for="email">Adresse email : </label>
+                    <input id="email" name="email" type="email" required>
+                    <label for="password">Mot de passe : </label>
+                    <input id="password" name="mot de passe" type="password" required>
+                    <button class="boutton__connexion" type="submit">Me Connecter</button>
+                </form>
+                <a class="not__account" href="#">Je n'ai pas de compte</a>
+            </div>
+        </section>
+    </header>
+    <!--Première section titre-->
+    <section id="first_section">
+        <figure>
+            <img src="./images/teddy_5.jpg" alt="photo d'ours en peluche regardant vers une fenêtre">
+        </figure>
+        <h1 id="my_titre">Oriourson </br><span>by Orinoco</span></h1>
+        <h2>n°1 des sites de ventes d'Ours en peluche fait entièrement à la main.</h2>
+    </section>
+    <!--Section vente des articles-->
+    <section id="catalogue">
+        <section id="premier_ourson">
+            <figure>
+                <img src="./images/teddy_1.jpg" alt="photo d'un premier ours en peluche">
+            </figure>
+            <div id="description_ourson">
+                <h3>Tommy l'Ourson</h3>
+                <p></p>
+            </div>
+            <div id="tarifs">
+                <div id="prix_ourson">
+                    <p>49 €</p>
+                </div>
+                <div id="ajout_panier">
+                    <button class="button__panier" type="button">Ajouter au panier</button>
+                </div>
+            </div>
+        </section>
+
+
+    </section>
+    <footer>
+
+    </footer>
     
 </body>
 </html>
