modifs hover des bouttons

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <p><span>Couleur : </span>Personnalisable</p>
                 <p><span>Matière : </span>Synthétique</p>
                 <p><span>Age : </span>Dès 1 an</p>
-                <p><span>Description</span></br>Découvre Toumignon, c'est le plus sage de tous les oursons. Mais cs sera aussi le meilleur ami de votre enfant pour son plus grand bonheur.</p>
+                <p><span>Description</span></br>Découvre Toumignon, c'est le plus sage de tous les oursons. Mais ce sera aussi le meilleur ami de votre enfant pour son plus grand bonheur.</p>
                 <p>Pour personnaliser votre Toumignon, <a class="cliquez" href="#">Cliquez ici !</a></p>
             </div>
             <div id="tarifs">
