ajout des medias queries

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
                     <li><a href="#">Mon compte</a></li>
                 </ul>
             </nav>
+            <!--Essai Menu Navigateur-->
+            <a class="btn btn--navbar" id="btnMenu">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </a>
+            <!--Fin Essai Menu Navigateur-->
         </section>
     </header>
     <!--Première section titre-->
@@ -37,7 +44,7 @@
     <!--Section vente des articles-->
     <section id="catalogue">
         <!--Premier Ourson-->
-        <section id="ourson">
+        <section id="ourson"class="PartieOurson PartieOurson--1">
             <figure>
                 <img src="./images/teddy_1.jpg" alt="photo d'un premier ours en peluche">
             </figure>
@@ -60,7 +67,7 @@
             </div>
         </section>
         <!--Deuxième Ourson-->
-        <section id="ourson">
+        <section id="ourson" class="PartieOurson PartieOurson--2">
             <figure>
                 <img src="./images/teddy_2.jpg" alt="photo d'un deuxième ours en peluche">
             </figure>
@@ -83,7 +90,7 @@
             </div>
         </section>
         <!--Troisème Ourson-->
-        <section id="ourson">
+        <section id="ourson" class="PartieOurson PartieOurson--3">
             <figure>
                 <img src="./images/teddy_3.jpg" alt="photo d'un deuxième ours en peluche">
             </figure>
@@ -106,7 +113,7 @@
             </div>
         </section>
         <!--Quatrième Ourson-->
-        <section id="ourson">
+        <section id="ourson" class="PartieOurson PartieOurson--4">
             <figure>
                 <img src="./images/teddy_4.jpg" alt="photo d'un deuxième ours en peluche">
             </figure>
@@ -130,6 +137,33 @@
         </section>
     </section>
     <footer>
+        <section id="footer">
+            <div class="informations">
+                <h4>informations</h4>
+                <ul>
+                    <li><a href="#">Qui sommes nous ?</a></li>
+                    <li><a href="#">Mentions légales</a></li>
+                    <li><a href="#">Conditions générales</a></li>
+                </ul>
+            </div>
+            <div class="Service Clients">
+                <h4>Service Clients</h4>
+                <ul>
+                    <li><a href="#">Suivi de votre commande</a></li>
+                    <li><a href="#">Retour et remboursement</a></li>
+                    <li><a href="#">Nous Contacter</a></li>
+                </ul>
+            </div>
+            <div class="compte">
+                <h4>Mon Compte</h4>
+                <ul>
+                    <li><a href="#">Me connecter</a></li>
+                    <li><a href="#">Mes commandes</a></li>
+                    <li><a href="#">Mes adresses</a></li>
+                </ul>
+            </div>
+
+        </section>
 
     </footer>
     
