modifs des pages supplémentaires css et queries

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <ul>
                     <li><a href="#first_section">Accueil</a></li>
                     <li><a href="#catalogue">Catalogue</a></li>
+                    <li><a href="#">Mon Panier</a></li>
                     <li><a href="#">Mon compte</a></li>
                 </ul>
             </nav>
@@ -42,7 +43,7 @@
         <h2>n°1 des sites de ventes d'Ours en peluche fait entièrement à la main.</h2>
     </section>
     <!--Section vente des articles-->
-    <section id="catalogue">
+    <section id="catalogue" class="partie__ourson">
         <!--Premier Ourson-->
         <section class="PartieOurson PartieOurson--1">
             <figure>
@@ -55,7 +56,7 @@
                 <p><span>Matière : </span>Synthétique</p>
                 <p><span>Age : </span>Dès 1 an</p>
                 <p><span>Description : </span>Découvrez ce magnifique Ourson, fait entièrement à la main. Il fera le plus grand plaisir à votre boutchou et l'accompagnera dans toutes ses aventures.</p>
-                <p>Pour personnaliser votre Touronchon, <a class="cliquez" href="#">Cliquez ici !</a></p>
+                <p>Pour personnaliser votre Touronchon, <a class="cliquez" href="touronchon.html">Cliquez ici !</a></p>
             </div>
             <div class="tarifs">
                 <div class="prix_ourson">
@@ -78,7 +79,7 @@
                 <p><span>Matière : </span>Synthétique</p>
                 <p><span>Age : </span>Dès 1 an</p>
                 <p><span>Description : </span>Découvrez ce magnifique Ourson, fait entièrement à la main. Il fera le plus grand plaisir à votre boutchou et aime énormément les bisous</p>
-                <p>Pour personnaliser votre Toubisou, <a class="cliquez" href="#">Cliquez ici !</a></p>
+                <p>Pour personnaliser votre Toubisou, <a class="cliquez" href="toubisou.html">Cliquez ici !</a></p>
             </div>
             <div class="tarifs">
                 <div class="prix_ourson">
@@ -101,7 +102,7 @@
                 <p><span>Matière : </span>Synthétique</p>
                 <p><span>Age : </span>Dès 1 an</p>
                 <p><span>Description : </span>Toucalin est un petit Ourson, très heureux. Il aime les bisous mais surtout passe sa journée à faire des câlins à quiconque qui s'en approche.</p>
-                <p>Pour personnaliser votre Toucalin, <a class="cliquez" href="#">Cliquez ici !</a></p>
+                <p>Pour personnaliser votre Toucalin, <a class="cliquez" href="toucalin.html">Cliquez ici !</a></p>
             </div>
             <div class="tarifs">
                 <div class="prix_ourson">
@@ -124,7 +125,7 @@
                 <p><span>Matière : </span>Synthétique</p>
                 <p><span>Age : </span>Dès 1 an</p>
                 <p><span>Description : </span>Découvre Toumignon, c'est le plus sage de tous les oursons. Mais ce sera aussi le meilleur ami de votre enfant pour son plus grand bonheur.</p>
-                <p>Pour personnaliser votre Toumignon, <a class="cliquez" href="#">Cliquez ici !</a></p>
+                <p>Pour personnaliser votre Toumignon, <a class="cliquez" href="toumignon.html">Cliquez ici !</a></p>
             </div>
             <div class="tarifs">
                 <div class="prix_ourson">
@@ -137,7 +138,7 @@
         </section>
     </section>
     <footer>
-        <section id="footer">
+        <section id="footer" class="footer_catalogue">
             <div class="informations">
                 <h4>informations</h4>
                 <ul>
