ajout de la page js

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
     <title>Oriourson - Vente en ligne d'ours en peluche fait main</title>
+    
 </head>
 <body>
     <header>
@@ -165,6 +166,6 @@
             </div>
         </section>
     </footer>
-    
+    <script src="index.js"></script>
 </body>
 </html>
