modif suites aux changements pour intégration dynamique javascript

--- a/index.html
+++ b/index.html
@@ -38,105 +38,14 @@
     <!--Première section titre-->
     <section id="first_section">
         <figure>
-            <img src="./images/teddy_5.jpg" alt="photo d'ours en peluche regardant vers une fenêtre">
+            <img id="fond-photo-ourson" alt="photo d'ours en peluche regardant vers une fenêtre">
         </figure>
         <h1 id="my_titre">Oriourson <span>by Orinoco</span></h1>
         <h2>n°1 des sites de ventes d'Ours en peluche fait entièrement à la main.</h2>
     </section>
     <!--Section vente des articles-->
     <section id="catalogue" class="partie__ourson">
-        <!--Premier Ourson-->
-        <section class="PartieOurson PartieOurson--1">
-            <figure>
-                <img src="./images/teddy_1.jpg" alt="photo d'un premier ours en peluche">
-            </figure>
-            <div class="description_ourson">
-                <h3>Touronchon</h3>
-                <p><span>Taille : </span>45cm</p>
-                <p><span>Couleur : </span>Personnalisable</p>
-                <p><span>Matière : </span>Synthétique</p>
-                <p><span>Age : </span>Dès 1 an</p>
-                <p><span>Description : </span>Découvrez ce magnifique Ourson, fait entièrement à la main. Il fera le plus grand plaisir à votre boutchou et l'accompagnera dans toutes ses aventures.</p>
-                <p>Pour personnaliser votre Touronchon, <a class="cliquez" href="touronchon.html">Cliquez ici !</a></p>
-            </div>
-            <div class="tarifs">
-                <div class="prix_ourson">
-                    <p>49 €</p>
-                </div>
-                <div class="ajout_panier">
-                    <button class="button__panier" type="button">Ajouter au panier</button>
-                </div>
-            </div>
-        </section>
-        <!--Deuxième Ourson-->
-        <section class="PartieOurson PartieOurson--2">
-            <figure>
-                <img src="./images/teddy_2.jpg" alt="photo d'un deuxième ours en peluche">
-            </figure>
-            <div class="description_ourson">
-                <h3>Toubisou</h3>
-                <p><span>Taille : </span>39cm</p>
-                <p><span>Couleur : </span>Personnalisable</p>
-                <p><span>Matière : </span>Synthétique</p>
-                <p><span>Age : </span>Dès 1 an</p>
-                <p><span>Description : </span>Découvrez ce magnifique Ourson, fait entièrement à la main. Il fera le plus grand plaisir à votre boutchou et aime énormément les bisous</p>
-                <p>Pour personnaliser votre Toubisou, <a class="cliquez" href="toubisou.html">Cliquez ici !</a></p>
-            </div>
-            <div class="tarifs">
-                <div class="prix_ourson">
-                    <p>59 €</p>
-                </div>
-                <div class="ajout_panier">
-                    <button class="button__panier" type="button">Ajouter au panier</button>
-                </div>
-            </div>
-        </section>
-        <!--Troisème Ourson-->
-        <section class="PartieOurson PartieOurson--3">
-            <figure>
-                <img src="./images/teddy_3.jpg" alt="photo d'un deuxième ours en peluche">
-            </figure>
-            <div class="description_ourson">
-                <h3>Toucalin</h3>
-                <p><span>Taille : </span>43cm</p>
-                <p><span>Couleur : </span>Personnalisable</p>
-                <p><span>Matière : </span>Synthétique</p>
-                <p><span>Age : </span>Dès 1 an</p>
-                <p><span>Description : </span>Toucalin est un petit Ourson, très heureux. Il aime les bisous mais surtout passe sa journée à faire des câlins à quiconque qui s'en approche.</p>
-                <p>Pour personnaliser votre Toucalin, <a class="cliquez" href="toucalin.html">Cliquez ici !</a></p>
-            </div>
-            <div class="tarifs">
-                <div class="prix_ourson">
-                    <p>69 €</p>
-                </div>
-                <div class="ajout_panier">
-                    <button class="button__panier" type="button">Ajouter au panier</button>
-                </div>
-            </div>
-        </section>
-        <!--Quatrième Ourson-->
-        <section class="PartieOurson PartieOurson--4">
-            <figure>
-                <img src="./images/teddy_4.jpg" alt="photo d'un deuxième ours en peluche">
-            </figure>
-            <div class="description_ourson">
-                <h3>Toumignon</h3>
-                <p><span>Taille : </span>45cm</p>
-                <p><span>Couleur : </span>Personnalisable</p>
-                <p><span>Matière : </span>Synthétique</p>
-                <p><span>Age : </span>Dès 1 an</p>
-                <p><span>Description : </span>Découvre Toumignon, c'est le plus sage de tous les oursons. Mais ce sera aussi le meilleur ami de votre enfant pour son plus grand bonheur.</p>
-                <p>Pour personnaliser votre Toumignon, <a class="cliquez" href="toumignon.html">Cliquez ici !</a></p>
-            </div>
-            <div class="tarifs">
-                <div class="prix_ourson">
-                    <p>49 €</p>
-                </div>
-                <div class="ajout_panier">
-                    <button class="button__panier" type="button">Ajouter au panier</button>
-                </div>
-            </div>
-        </section>
+    
     </section>
     <footer>
         <section id="footer" class="footer_catalogue">
