modif footer page product

--- a/product.html
+++ b/product.html
@@ -40,7 +40,7 @@
         
     </section>
     <footer>
-        <section id="footer" class="footer_catalogue">
+        <section id="footer" class="footer_catalogue--product">
             <div class="informations">
                 <h4>informations</h4>
                 <ul>
