--- a/product.html
+++ b/product.html
@@ -20,8 +20,7 @@
             </figure>
             <nav id="navigateur_principal">
                 <ul>
-                    <li><a href="#first_section">Accueil</a></li>
-                    <li><a href="#catalogue">Catalogue</a></li>
+                    <li><a href="index.html">Accueil</a></li>
                     <li><a href="#">Mon Panier</a></li>
                     <li><a href="#">Mon compte</a></li>
                 </ul>
@@ -36,7 +35,7 @@
         </section>
     </header>
     <!--Section vente des articles-->
-    <section id="page_product" class="partie__product">
+    <section id="page_product">
         
     </section>
     <footer>
@@ -67,6 +66,6 @@
             </div>
         </section>
     </footer>
-    <script src="index.js"></script>
+    <script src="product.js"></script>
 </body>
 </html>
