--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             </figure>
             <nav id="navigateur_principal">
                 <ul>
-                    <li><a href="#first_section">Accueil</a></li>
+                    <li><a id="accueil" href="#first_section">Accueil</a></li>
                     <li><a href="#catalogue">Catalogue</a></li>
-                    <li><a href="#">Mon Panier</a></li>
+                    <li><a href="./panier.html">Mon Panier</a></li>
                     <li><a href="#">Mon compte</a></li>
                 </ul>
             </nav>
@@ -38,7 +38,7 @@
     <!--Première section titre-->
     <section id="first_section">
         <figure>
-            <img id="fond-photo-ourson" alt="photo d'ours en peluche regardant vers une fenêtre">
+            <img id="fond-photo-ourson">
         </figure>
         <h1 id="my_titre">Oriourson <span>by Orinoco</span></h1>
         <h2>n°1 des sites de ventes d'Ours en peluche fait entièrement à la main.</h2>
