--- a/product.html
+++ b/product.html
@@ -20,8 +20,8 @@
             </figure>
             <nav id="navigateur_principal">
                 <ul>
-                    <li><a href="index.html">Accueil</a></li>
-                    <li><a href="#">Mon Panier</a></li>
+                    <li><a id="accueil" href="index.html">Accueil</a></li>
+                    <li><a href="./panier.html">Mon Panier</a></li>
                     <li><a href="#">Mon compte</a></li>
                 </ul>
             </nav>
