mise ne page de la page panier

--- a/panier.html
+++ b/panier.html
@@ -40,7 +40,8 @@
                 <h2>Détail de votre panier :</h2>
                 <div id="detailCommande">
                     <div id="titreCommande">
-                        <div id="nomCommande">Prénom et id de l'ourson</div>
+                        <div id="nomCommande">Produits Sélectionnés</div>
+                        <div id="couleurCommande">Couleur Sélectionnée</div>
                         <div id="quantitéCommande">Selectionner une quantité*</div>
                         <div id="prixCommande">Prix de votre commande</div>
                     </div>
