--- a/panier.html
+++ b/panier.html
@@ -76,6 +76,6 @@
             </div>
         </section>
     </footer>
-    <script src="panier.js"></script>
+    <script src="cart.js"></script>
 </body>
 </html>
