--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <figure>
             <img id="fond-photo-ourson">
         </figure>
-        <h1 id="my_titre">Oriourson <span>by Orinoco</span></h1>
-        <h2>n°1 des sites de ventes d'Ours en peluche fait entièrement à la main.</h2>
+        <h1 id="my_title">Oriourson <span>by Orinoco</span></h1>
+        <h2 id="my_second_title">n°1 des sites de ventes d'Ours en peluche fait entièrement à la main.</h2>
     </section>
     <!--Section vente des articles-->
     <section id="catalogue" class="partie__ourson">
