--- a/thankyou.html
+++ b/thankyou.html
@@ -65,6 +65,6 @@
             </div>
         </section>
     </footer>
-    <script src="thanks.js"></script>
+    <script src="cart.js"></script>
 </body>
 </html>
