--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     </header>
     <!--Première section titre-->
     <section id="first_section">
-        <figure>
-            <img id="fond-photo-ourson">
+        <figure id="fond-photo-ourson">
+            <!--<img id="fond-photo-ourson">-->
         </figure>
         <h1 id="my_title">Oriourson <span>by Orinoco</span></h1>
         <h2 id="my_second_title">n°1 des sites de ventes d'Ours en peluche fait entièrement à la main.</h2>
