modif pour essai génération page remerciement

--- a/thankyou.html
+++ b/thankyou.html
@@ -35,6 +35,26 @@
     </header>
     <!--Section vente des articles-->
     <section id="page_remerciements">
+        <div id="contact_FirstName"></div>
+        <div id="thanks">
+            <p id="premiere_partie">Nous te remercions pour ton achat, pour un montant de</p>
+            <p id="prix_achat"></p>
+            <p id="euro"> €.</p>
+        </div>
+        <div id="thanks2">
+            <p id="deuxieme_partie">Ton numéro de commande est le :</p>
+            <p id="order_id"></p>
+        </div>
+        <div id="thanks3">
+            <p id="troisieme_partie">, garde le. Il te sera utile, lors d'éventuels échanges entre nous.</p>
+            <p>Toute l'équipe d'Oriourson te remercie et nous te souhaitons une belle journée.</p>
+        </div>
+        <!--<div id="detailCommande">
+            <div id="monPanier">
+
+            </div>
+
+        </div>-->
         
     </section>
     <footer>
