--- a/thankyou.html
+++ b/thankyou.html
@@ -35,9 +35,8 @@
     </header>
     <!--Section vente des articles-->
     <section id="page_remerciements">
-        <div id="contact_FirstName"></div>
         <div id="thanks">
-            <p id="premiere_partie">Nous te remercions pour ton achat, pour un montant de</p>
+            <p id="premiere_partie">Nous te remercions pour ton achat, pour un montant de &nbsp;</p>
             <p id="prix_achat"></p>
             <p id="euro"> €.</p>
         </div>
@@ -46,16 +45,9 @@
             <p id="order_id"></p>
         </div>
         <div id="thanks3">
-            <p id="troisieme_partie">, garde le. Il te sera utile, lors d'éventuels échanges entre nous.</p>
+            <p id="troisieme_partie"> Garde le. Il te sera utile, lors d'éventuels échanges entre nous.</p>
             <p>Toute l'équipe d'Oriourson te remercie et nous te souhaitons une belle journée.</p>
         </div>
-        <!--<div id="detailCommande">
-            <div id="monPanier">
-
-            </div>
-
-        </div>-->
-        
     </section>
     <footer>
         <section id="footer" class="footer_catalogue--thanks">
@@ -85,6 +77,6 @@
             </div>
         </section>
     </footer>
-    <script src="cart.js"></script>
+    <script src="thanks.js"></script>
 </body>
 </html>
