--- a/product.html
+++ b/product.html
@@ -18,20 +18,15 @@
             <figure>
                 <img src="./images/logo_orinoco1.png" alt="logo Orinoco">
             </figure>
-            <nav id="navigateur_principal">
-                <ul>
-                    <li><a id="accueil" href="index.html">Accueil</a></li>
-                    <li><a href="./panier.html">Mon Panier</a></li>
-                    <li><a href="#">Mon compte</a></li>
-                </ul>
-            </nav>
-            <!--Essai Menu Navigateur-->
-            <a class="btn btn--navbar" id="btnMenu">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </a>
-            <!--Fin Essai Menu Navigateur-->
+            <div class="toggle_btn">
+                <span></span>
+            </div>
+
+            <div class="menu nav">
+                <a href="index.html">Catalogue</a>
+                <a href="panier.html">Mon Panier</a>
+                <a href="#">Mon Compte</a>
+            </div>
         </section>
     </header>
     <!--Section vente des articles-->
