modif erreur page cart, ====, lien dans logo, regex email, verif lors du click

--- a/panier.html
+++ b/panier.html
@@ -15,9 +15,11 @@
 <body>
     <header>
         <section class="petit_bandeau">
-            <figure>
-                <img src="./images/logo_orinoco1.png" alt="logo Orinoco">
-            </figure>
+            <a href="./index.html">
+                <figure>
+                    <img src="./images/logo_orinoco1.png" alt="logo Orinoco">
+                </figure>
+            </a>
             <div class="toggle_btn">
                 <span></span>
             </div>
